# morojenoye

./: Cargo.toml  default.nix  qemu-rv64-virt.sh  rust-toolchain.toml  shell.nix
.cargo/: config.toml
morojenoye/: Cargo.toml  build.rs  main.rs  memory.x
runner/: qemu-system-riscv64-virt-uboot.sh
uboot-aarch64-rt/: Cargo.toml
uboot-riscv64-rt/: Cargo.toml  build.rs  kernel.ld  main.rs
uboot-riscv64-rt/qemu_rv64_virt/: layout.ld
uboot-rt/: Cargo.toml
uboot-rt/uboot-riscv64-rt/: Cargo.toml  main.rs
uboot-rt/uboot-riscv64-rt/qemu_rv64_virt/: default.nix  morojenoye.toml  runner.sh
